# gimp-plugin-bilateral

./: AUTHORS  README  autogen.sh  configure.in
src/: Makefile.am  bilateral.cpp  bilateral.h  image.cpp  image.h  interface.c  interface.h  main.c  main.h  plugin-intl.h  render.c  render.h  settings.h
src/.deps/: bilateral.Po  image.Po  interface.Po  main.Po  render.Po
